tests/baselines/reference/jsFileCompilationModuleSyntax.errors.txt
tests/cases/compiler/a.js(1,8): error TS8007: 'module declarations' can only be used in a .ts file.


==== tests/cases/compiler/a.js (1 errors) ====
    module M { }
           ~
!!! error TS8007: 'module declarations' can only be used in a .ts file.